# yact

./: .dockerignore  .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/yact/: app.py
src/yact/platform/: task_docker.py
tests/: test_hello.py
